--- a/Atju/Info.plist
+++ b/Atju/Info.plist
@@ -26,7 +26,7 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>atju.4su.re</key>
+			<key>atju.herokuapp.com</key>
 			<dict>
 				<key>NSIncludesSubdomains</key>
 				<false/>
